fix some spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -199,5 +199,5 @@ button {
 }
 
 .wrapper {
-  @apply max-w-5xl mx-auto px-5 py-10 sm:py-28;
+  @apply max-w-5xl mx-auto px-5 py-10 sm:py-20;
 }
